--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background-color: blue;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pong Game</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <canvas id="pong" width="800" height="400"></canvas>
+    <script src="script.js"></script>
+</body>
+</html>
 
-canvas {
-    border: 2px solid white;
-}
